--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
     <link rel="stylesheet" href="stylesheets/leaflet.ie.css" type="text/css"/>
     <link rel="stylesheet" href="pancontrol/stylesheets/L.Control.Pan.ie.css" type="text/css"/>
   -->
-  <link href="stylesheets/bootstrap-mini.css" rel="stylesheet" type="text/css"/>
+  <!--
+    <link href="stylesheets/bootstrap-mini.css" rel="stylesheet" type="text/css"/>
+  -->
+  <link href='stylesheets/jquery-ui-slider.css' rel='stylesheet' type='text/css'/>
   <link href='stylesheets/displaymap.css' rel='stylesheet' type='text/css'/>
   <script type="text/javascript" src="scripts/leaflet.js"></script>
   <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
+  <script type="text/javascript" src="scripts/jquery-ui-slider.min.js"></script>
   <script type="text/javascript" src="pancontrol/scripts/L.Control.Pan.js"></script>
   <script type="text/javascript" src="scripts/displaymap.js"></script>
 </head>
 <body>
-  <div id="sidebar">
+  <div id="topbar">
+    <div class="instructions">
+      <strong class="instructions">Drop GeoJSON and KML files with times onto this page.</strong>
+      <a href="Arnop1.kml">Download one</a>
+    </div>
+  	<div class="output">
+  	  <span id="readtime" class="output"></span>
+  	</div>
+  	<div id="slidebar">
+  	</div>
   </div>
   <div id="map">
   </div>
