GPX and partial CSV support

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div id="topbar">
     <div class="instructions">
-      <strong class="instructions">Drop GeoJSON and KML files with times onto this page.</strong>
+      <strong class="instructions">Drop GeoJSON, KML, and GPX files with times onto this page.</strong>
       <a href="Arnop1.kml">Download one</a>
     </div>
   	<div class="output">
