change example to Eneko trip

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="topbar">
     <div class="instructions">
       <strong class="instructions">Drop GeoJSON, KML, and GPX files with times onto this page.</strong>
-      <a href="Arnop1.kml">Download one</a>
+      <a href="ToEneko.kml">Download one</a>
     </div>
   	<div class="output">
   	  <span id="readtime" class="output"></span>
