add play button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
   <title>Crunchtime Map</title>
+  <link href='bootstrap/css/bootstrap.min.css' rel='stylesheet' type='text/css'/>
   <link rel="stylesheet" href="stylesheets/leaflet.css" type="text/css"/>
   <!-- [if lte IE 8]
     <link rel="stylesheet" href="stylesheets/leaflet.ie.css" type="text/css"/>
@@ -25,6 +26,12 @@
   	</div>
   	<div id="slidebar">
   	</div>
+  	<div id="controls" class="output">
+  	  <a href="#" class="btn btn-success">
+  	    <i class="icon-play-circle icon-white"></i>
+  	    <span>Play</span>
+      </a>
+    </div>
   </div>
   <div id="map">
   </div>
