any-csv handler

--- a/index.html
+++ b/index.html
@@ -35,5 +35,18 @@
   </div>
   <div id="map">
   </div>
+  <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
+
+  <div id="csvguide" class="modal hide fade">
+    <div class="modal-header">
+      <button class="close cancelcsv" type="button" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3>CSV Guide</h3>
+    </div>
+    <div class="modal-body">
+      <p>Click the X above the <span id="colnamer">latitude</span> column.</p>
+      <table class="table table-bordered table-striped">
+      </table>
+    </div>
+  </div>
 </body>
 </html>
