list CSV on homepage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="topbar">
     <div class="instructions">
-      <strong class="instructions">Drop GeoJSON, KML, and GPX files with times onto this page.</strong>
+      <strong class="instructions">Drop GeoJSON, KML, GPX, and CSV files with times onto this page.</strong>
       <a href="ToEneko.kml">Download one</a>
     </div>
   	<div class="output">
